# sleuth-sklearn

./: .gitignore  .pre-commit-config.yaml  README.md  calibrate.py  pyproject.toml
config_examples/: calibrate.toml  predict.toml
sleuth_sklearn/: calibrate.py  driver.py  estimator.py  grid.py  labeling.py  predict.py  scenario.py  spread.py  stats.py  timer.py  utils.py
sleuth_sklearn/indices/: I.py  J.py
sleuth_sklearn/scripts/: calibrate.py  calibrate_bulk.py
