[tool.poetry]
name = "sleuth-sklearn"
version = "0.1.0"
description = ""
authors = ["RodolfoFigueroa <4rodolfofigueroa2@gmail.com>"]
readme = "README.md"
packages = [{include = "sleuth_sklearn"}]

[tool.poetry.scripts]
sleuth-calibrate = "sleuth_sklearn.scripts.calibrate:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
geopandas = "^0.12.2"
pandas = "^2.0.1"
xarray = "^2023.4.2"
rioxarray = "^0.14.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
numba = "^0.57.0"
toml = "^0.10.2"
netcdf4 = "~1.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
matplotlib = "^3.7.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
